@@ -1,0 +1,1 @@
+<body><area><base><br><col><hr><img src="http://www.zorba-xquery.com"><input><link><meta><param name="a" value="1"></body>
