@@ -1,0 +1,14 @@
+(: Ensure tags that have an empty content mode in HTML are :)
+(: serialized correctly :)
+<body>
+<area/>
+<base/>
+<br/>
+<col/>
+<hr/>
+<img src="http://www.zorba-xquery.com"/>
+<input/>
+<link/>
+<meta/>
+<param name="a" value="1"/>
+</body>
