@@ -1,0 +1,4 @@
+(: Ensure tags that MAY be empty in HTML are serialized correctly :)
+<body>
+<p/><textarea/><td/><iframe/><div/><script/>
+</body>
