@@ -1,0 +1,4 @@
+(: Ensure tags that MAY be empty in XHTML are serialized correctly :)
+<body>
+<p/><textarea/><td/><iframe/><div/><random/>
+</body>
